[build-system]
requires = ["setuptools >= 61.0", "wheel"]

[project]
name = "graph-lmgec"   # Name of the project (pip install graph-lmgec)
version = "0.1.0"      # Version of the project
description = "Python package for multi-view graphs clustering and representation learning algorithms."
readme = "README.md"   # Path to the README file
requires-python = ">=3.8"  # Minimum Python version required
license = { file = "LICENSE" }    
authors = [
    { name = "abdelheq mokhtari", email = "mokhtari.abdelheq@gmail.com" },
]
keywords = ["graph", "clustering", "representation learning", "multi-view", "machine learning"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "operating system :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "numpy >= 1.21.0",
    "scipy >= 1.7.0",
    "scikit-learn >= 1.0.0",
    "networkx >= 2.6.0",
    "pandas >= 1.3.0",
]

[project.urls]
Homepage = "https://github.com/mokhtari.abdelheq/graph-lmgec"
"bug tracker" = "https://github.com/mokhtari.abdelheq/graph-lmgec/issues"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"graphs.lmgec.datasets" = ["*.mat"]
